# VitaLink

./: .dockerignore  .env-example  .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  audit.py  auth.py  babel.cfg  cloudbuild.yaml  compile_translations.py  complete_report1.txt  complete_report2.txt  db_migrate.sh  deploy copy&paste  docker-compose.debug.yml  docker-compose.yml  docker-entrypoint.sh  docker-requirements.txt  fitbit_api_service.py  fitbit_integration.py  health_platforms.py  health_platforms_config.py  index.html  language.py  login.html  messages.pot  migrate.py  models.py  notifications.py  observations.py  pyproject.toml  pytest.ini  reports.py  requirements.txt  run_tests.py  set-cloudformation-aws.ps1  set-credentials-aws.ps1  (+6 more)
.github/: repository-settings.yml  secrets.env.example
.github/workflows/: README.md  aws-build-push.yml  aws-cleanup.yml  aws-cloudformation-deploy.yml  aws-deploy.yml  aws-monitoring.yml  cleanup.yml  code-analysis.yml  deploy-staging.yml  deploy.yml  docker-image.yml  docker-publish.yml  docs-publish.yml  main.yml  monitor.yml  test-workflow-integration.yml  test.yml
UML/: Class.wsd  Communication.wsd  Components.wsd  Distribution.wsd  Package.wsd  State.wsd  Temporal.wsd  activity_diagram.wsd  class_diagram.wsd  component_diagram.wsd  composite_structure_diagram.wsd  deployment_diagram.wsd  interaction_overview_diagram.wsd  package_diagram.wsd  sequence_diagram.wsd  state_diagram.wsd  timing_diagram.wsd  use_case_diagram.wsd
analysis/: index.html
android_app/: README.md  settings.gradle
android_app/app/: build.gradle
app/: __init__.py  api.py  app.py  audit.py  auth.py  compile_translations.py  email_utils.py  health_platforms.py  health_platforms_config.py  language.py  main.py  migrate.py  models.py  observations.py  reports.py  utils.py  views.py
app/static/css/: custom.css  health_connect.css
app/static/js/: health_platforms.js  main.js  observations.js  patients.js  specific_report.js  translations.js  vitals.js  vitals_charts.js
app/templates/: audit_logs.html  base.html  dashboard.html  health_connect.html  health_connect_result.html  login.html  patient_detail.html  patients.html  profile.html  register.html  specific_report_form.html  vitals.html
app/translations/: babel.cfg  messages.pot
attached_assets/: Pasted--ERROR-web-5-9-RUN-pip-install-no-cache-dir-upgrade-pip-pip-install-no-cache-dir-u-1745267082220.txt  Pasted-Ciao-Devo-sviluppare-una-tesi-per-la-mia-laurea-triennale-di-ingegneria-informatica-Adattati-per-l-1745252903757.txt  Pasted-Ciao-Devo-sviluppare-una-tesi-per-la-mia-laurea-triennale-di-ingegneria-informatica-Adattati-per-l-1745252924615.txt  Pasted-Errore-durante-il-salvataggio-dei-dati-Fitbit-Errore-database-psycopg2-errors-InvalidTextReprese-1745262722673.txt
code/: 404.html  index.html  objects.inv
code/modules/: api.html  app.html  audit.html  auth.html  compile_translations.html  email_utils.html  health_platforms.html  health_platforms_config.html  language.html  main.html  migrate.html  models.html  observations.html  reports.html  utils.html  views.html
code/search/: search_index.json
docker/: Dockerfile  docker-entrypoint.sh
docs/: API_Documentation.md  Development_Guide.md  VitaLink_Documentation.md  api_endpoints.md  design_patterns_technologies_standards.md  project_plan.md  requirements.md  use_guide.md
docs/Database/: Schema ER.mmd
docs/UML/: Composite structure.wsd  Distribution.wsd  Objects.wsd  Sequence.wsd  Use Case.wsd
docs/UML/Activity/: PatientManagement.wsd  RegistrationLogin.wsd  activity_diagram.wsd
docs/UML/Class/: ClassDiagram.wsd  class_diagram.wsd
docs/UML/Communication/: VitalSignsVisualization.wsd  communication_diagram.wsd
docs/UML/Component/: SystemArchitecture.wsd  component_diagram.wsd
docs/UML/Deployment/: InfrastructureDeployment.wsd  Template.drawio  deployment_diagram.wsd
docs/UML/ER/: DataModel.wsd  er_diagram.wsd
docs/UML/Object/: InstanceExample.wsd  object_diagram.wsd
docs/UML/Package/: package_diagram.wsd
docs/UML/Sequence/: HealthDeviceConnection.wsd  ReportGeneration.wsd  sequence_diagram.wsd
docs/UML/State/: PatientLifecycle.wsd  state_diagram.wsd
docs/UML/Timing/: DataSynchronization.wsd  timing_diagram.wsd
docs/UML/Use Case/: UseCaseDiagram.wsd  use_case_diagram.wsd
docs/code/: mkdocs.yml
docs/code/docs/: index.md
docs/tests/: mkdocs.yml
docs/tests/docs/: index.md
docs/thesis/: thesis.lof  thesis.lot  thesis.tex
migrations/versions/: add_enum_values.py  add_observation_to_entity_type.py  cc82b6077aee_add_health_platform_integration.py  d23e86ba47c8_add_vital_observations.py  e99b4eeeca29_merge_multiple_heads.py  update_enum_action_type.py
static/css/: custom.css  health_connect.css
static/js/: health_connection.js  health_platforms.js  main.js  observations.js  patients.js  specific_report.js  specific_report_new.js  translations.js  vitals.js  vitals_charts.js
templates/: audit_logs.html  base-no-session.html  base.html  dashboard.html  error.html  fitbit_upload.html  health_connect.html  health_connect_result.html  login.html  patient_detail.html  patients.html  profile.html  register.html  specific_report_form.html  specific_report_form_new.html  vitals.html
tests/: 404.html  README.md  conftest.py  fixtures.py  index.html  objects.inv  run_tests.py  test_api.py  test_audit.py  test_auth.py  test_babel.py  test_health_platforms.py  test_i18n.py  test_models.py  test_observations.py  test_reports.py  test_utils.py  test_views.py
tests/search/: search_index.json
tests/tests/: conftest.html  test_api.html  test_audit.html  test_auth.html  test_models.html  test_observations.html  test_utils.html  test_views.html
translations/it/LC_MESSAGES/: messages.mo  messages.po
vitalink_companion/: pubspec.yaml
vitalink_companion/android/app/: build.gradle.kts
vitalink_companion/linux/: CMakeLists.txt
vitalink_companion/test/: widget_test.dart
vitalink_companion/web/: index.html  manifest.json
vitalink_companion/windows/: CMakeLists.txt
(+56 files in other folders)
