[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Vital data monitoring platform for patients in the context of therapy analysis and evaluation."
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "flask-jwt-extended>=4.7.1",
    "pytest>=8.3.5",
    "sqlalchemy>=2.0.40",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "reportlab>=4.4.0",
    "flask-babel>=4.0.0",
    "polib>=1.2.0",
    "clicksend-client>=5.0.78",
    "flask-migrate>=4.1.0",
]
