[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "vitalink"             
version         = "0.1.0"
description     = "Vital-sign monitoring platform for therapy analysis and evaluation."
readme          = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Andrea Roggeri", email = "andrearoggeri22@gmail.com" }
]

license = { file = "LICENSE" }

classifiers = [
  "Framework :: Flask",
  "License :: OSI Approved :: Apache License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "Operating System :: OS Independent",
]

dependencies = [
  "aiohttp>=3.9.5",
  "aioquic>=1.2.0",
  "anyio>=4.9.0",
  "argcomplete>=3.6.2",
  "asgiref>=3.8.1",
  "Beaker>=1.13.0",
  "brotli>=1.1.0",
  "brotlicffi>=1.1.0.0",
  "clicksend-client>=5.0.78",
  "ConfigParser>=7.2.0",
  "contextlib2>=21.6.0",
  "cx_Oracle>=8.3.0",
  "defusedxml>=0.7.1",
  "docutils>=0.21.2",
  "dogpile.core>=0.4.1",
  "email-validator>=2.2.0",
  "eventlet>=0.39.1",
  "exceptiongroup>=1.2.2",
  "freetype_py>=2.5.1",
  "flask>=3.1.0",
  "flask-babel>=4.0.0",
  "flask-jwt-extended>=4.7.1",
  "flask-login>=0.6.3",
  "flask-migrate>=4.1.0",
  "flask-sqlalchemy>=3.1.1",
  "flask-wtf>=1.2.2",
  "gevent>=25.4.2",
  "gunicorn>=23.0.0",
  "h2>=4.2.0",
  "HTMLParser>=0.0.2",
  "httpcore>=1.0.9",
  "httpx>=0.28.1",
  "importlib_metadata>=8.0.0",
  "importlib_resources>=6.5.2",
  "inotify>=0.2.10",
  "ipython>=8.12.3",
  "ipywidgets>=8.1.6",
  "jnius>=1.1.0",
  "keyring>=25.6.0",
  "lingua>=4.15.0",
  "multidict>=6.4.3",
  "new>=1.0",
  "notifications>=0.3.2",
  "numpy>=2.2.5",
  "objgraph>=3.6.2",
  "olefile>=0.47",
  "PasteScript>=3.7.0",
  "pexpect>=4.9.0",
  "polib>=1.2.0",
  "protobuf>=6.30.2",
  "psutil>=7.0.0",
  "psycopg2-binary>=2.9.10",
  "pyaes>=1.6.1",
  "pylibdmtx>=0.1.10",
  "pyodide>=0.0.2",
  "pyOpenSSL>=25.0.0",
  "Pyphen>=0.17.2",
  "PyQt6>=6.9.0",
  "PySide6>=6.9.0",
  "pysqlcipher3>=1.2.0",
  "pywin32>=310",
  "redis>=5.2.1",
  "reportlab>=4.4.0",
  "requests>=2.32.3",
  "rlextra>=0.0.2",
  "rlPyCairo>=0.3.0",
  "setproctitle>=1.3.6",
  "sets>=0.3.2",
  "setuptools>=75.9.1",
  "simplejson>=3.20.1",
  "sniffio>=1.3.1",
  "Sphinx>=8.2.3",
  "sqlalchemy>=2.0.40",
  "sqlcipher3>=0.5.4",
  "thread>=2.0.5",
  "tokenize_rt>=6.1.0",
  "tornado>=6.4.2",
  "trio>=0.30.0",
  "Twisted>=24.11.0",
  "uharfbuzz>=0.50.0",
  "ukkonen>=1.0.1",
  "urllib3_secure_extra>=0.1.0",
  "uvloop>=0.21.0",
  "watchdog>=6.0.0",
  "werkzeug>=3.1.3",
  "wmi>=1.5.1",
  "wtforms>=3.2.1",
  "xmlrpclib>=1.0.1",
  "zope>=5.13",
  "zstandard>=0.23.0",
  "python-dotenv>=1.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff",      
  "black",       
  "pre-commit",
]

[project.scripts]
vitalink-flask    = "app:app"
vitalink-gunicorn = "app:app"

[tool.setuptools]
package-dir = { "" = "." }      
packages    = ["app"]         

[tool.setuptools.package-data]
app = [
  "static/**/*",
  "templates/**/*",
  "translations/**/*",
]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*", ".pytest_cache/*", "*.mmd", "*.wsd", "*.md", "app/docs/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q --import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
