[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "vitalink"             
version         = "0.1.0"
description     = "Vital-sign monitoring platform for therapy analysis and evaluation."
readme          = "README.md"
requires-python = ">=3.11"

authors = [
  { name = "Andrea Roggeri", email = "andrearoggeri22@gmail.com" }
]

license = { file = "LICENSE" }

classifiers = [
  "Framework :: Flask",
  "License :: OSI Approved :: Apache License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: Healthcare Industry",
  "Operating System :: OS Independent",
]

dependencies = [
  "email-validator>=2.2.0",
  "cloud-sql-python-connector>=1.18.1",
  "flask>=3.1.0",
  "flask-babel>=4.0.0",
  "flask-jwt-extended>=4.7.1",
  "flask-login>=0.6.3",
  "flask-migrate>=4.1.0",
  "flask-sqlalchemy>=3.1.1",
  "flask-wtf>=1.2.2",
  "wtforms>=3.2.1",
  "sqlalchemy>=2.0.40",
  "psycopg2-binary>=2.9.10", 
  "requests>=2.32.3",   
  "python-dotenv>=1.0.0",
  "gunicorn>=23.0.0",
  "notifications>=0.3.2",
  "polib>=1.2.0",
  "reportlab>=4.4.0",
  "werkzeug>=3.1.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "ruff",      
  "black",       
  "pre-commit",
]

[project.scripts]
vitalink-flask    = "app:app"
vitalink-gunicorn = "app:app"

[tool.setuptools]
package-dir = { "" = "." }      
packages    = ["app"]         

[tool.setuptools.package-data]
app = [
  "static/**/*",
  "templates/**/*",
  "translations/**/*",
]

[tool.setuptools.exclude-package-data]
"*" = ["*.pyc", "__pycache__/*", ".pytest_cache/*", "*.mmd", "*.wsd", "*.md", "app/docs/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-q --import-mode=importlib"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
